[feature] refactor AbstractMixerAudioPlayer: clean up unused imports, remove redundant fields, streamline exception handling, and simplify retry logic